--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -27,3 +27,13 @@ cgm_101 <- here("data-raw/dime/cgm/101.csv") %>%
     n_max = 100
   )
 ```
+
+## Exercise: Import 101's sleep data.
+```{r}
+sleep_101 <- here("data-raw/dime/sleep/101.csv") %>%
+  read_csv(
+    show_col_types = FALSE,
+    name_repair = to_snake_case,
+    n_max = 100
+  )
+```
