function to import sleep data

--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -81,3 +81,29 @@ here("data-raw/dime/cgm/101.csv") %>%
 here("data-raw/dime/cgm/102.csv") %>%
   import_cgm()
 ```
+ 
+## Exercise to make function to import sleep data
+ 
+```{r}
+#' Import on participants sleep
+#'
+#' @param file_path Path to sleep file
+#'
+#' @returns Returns to a data frame
+#'
+import_sleep <- function(file_path) {
+  sleep <- file_path %>%
+    read_csv(
+      show_col_types = FALSE,
+      name_repair = to_snake_case,
+      n_max = 100
+    )
+  return(sleep)
+}
+
+here("data-raw/dime/sleep/101.csv") %>%
+  import_sleep()
+
+here("data-raw/dime/sleep/102.csv") %>%
+  import_sleep()
+```
