Import data and using regex extration participant ID

--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -12,12 +12,13 @@ library(tidyverse)
 library(here)
 library(snakecase)
 library(fs)
+library(stringr)
 source(here("R/functions.R"))
+cgm_data <- here("data-raw/dime/cgm") %>%
+  import_csv_files() %>%
+  get_participant_id()
 ```
 
-```{r}
-# Code chunk
-```
 
 ## Importing CGM data
 
@@ -120,4 +121,27 @@ here("data-raw/dime/cgm/101.csv") %>%
 
 here("data-raw/dime/sleep/101.csv") %>%
   import_dime()
+```
+
+## Exercise: Convert map to function and use on sleep.
+
+```{r}
+here("data-raw/dime/cgm/") |>
+  import_csv_files()
+here("data-raw/dime/sleep/") |>
+  import_csv_files()
+```
+
+
+## Using regex for ID extraction
+
+
+```{r}
+here("data-raw/dime/cgm/") |>
+  import_csv_files() %>%
+  get_participant_id()
+
+here("data-raw/dime/sleep/") |>
+  import_csv_files() %>%
+  get_participant_id()
 ```
