--- a/docs/homework.qmd
+++ b/docs/homework.qmd
@@ -4,23 +4,14 @@ author: "Naja"
 format: html
 ---
 
-## Quarto
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
-```{r}
-1 + 1
+```{r setup}
+soruce(here::here("R/function-naja.R"))
+source(here::here("R/functions-mette.R"))
 ```
 
-You can add options to executable code like this 
+## opgave 6 kig på data
 
-```{r}
-#| echo: false
-2 * 2
-```
+## opgave 7 
 
-The `echo: false` option disables the printing of code (only output is displayed).
+
